# qt6_studentlist

./: CMakeLists.txt  README.md
src/app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  studentclient.cpp  studentclient.h
src/businesslogic/: CMakeLists.txt  businesslogic.cpp  businesslogic.h  studentservice.cpp  studentservice.h
src/data/: CMakeLists.txt  dbconnect.cpp  dbconnect.h
src/server/: CMakeLists.txt  appserver.cpp  appserver.h  main.cpp
